--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,13 +8,13 @@
 
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href="/assets/css/font-awesome.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="/assets/css/selectize.css" type="text/css">
-    <link rel="stylesheet" href="/assets/css/owl.carousel.css" type="text/css">
-    <link rel="stylesheet" href="/assets/css/vanillabox/vanillabox.css" type="text/css">
-    <link rel="stylesheet" href="/assets/css/vanillabox/vanillabox.css" type="text/css">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/selectize.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/owl.carousel.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/vanillabox/vanillabox.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/vanillabox/vanillabox.css" type="text/css">
 
-    <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 
     <title>DIEMS</title>
 
