--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,7 @@
                         <span class="icon-bar"></span>
                     </button>
         <div class="navbar-brand nav" id="brand">
-          <a href="/index.html"><img src="/assets/img/logo.png" alt="brand"></a>
+          <a href="/index.html"><img src="assets/img/logo.png" alt="brand"></a>
         </div>
       </div>
       <nav class="collapse navbar-collapse bs-navbar-collapse navbar-right " role="navigation">
@@ -83,7 +83,7 @@
 </div>
 <!-- /.primary-navigation -->
 <div class="background">
-  <img src="/assets/img/background-city.png" alt="background">
+  <img src="assets/img/background-city.png" alt="background">
 </div>
 
 
