--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -14,7 +14,7 @@ layout: page
                 <!-- Course Image -->
                 <div class="col-md-2">
                     <figure class="course-image">
-                        <div class="image-wrapper"><img src="/assets/img/course-detail-img.jpg"></div>
+                        <div class="image-wrapper"><img src="assets/img/course-detail-img.jpg"></div>
                     </figure>
                 </div><!-- end Course Image -->
                 <!--MAIN Content-->
@@ -56,8 +56,8 @@ layout: page
 
                                       {% if cat == page.short %}
                                         <li>
-                                          <a href="/assets/img/{{g.src}}" class="image-popup">
-                                            <img src="/assets/img/{{g.src}}" alt="">
+                                          <a href="assets/img/{{g.src}}" class="image-popup">
+                                            <img src="assets/img/{{g.src}}" alt="">
                                           </a>
                                         </li>
 
