--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- favicon -->
-<link rel="shortcut icon" type="image/png" href="/assets/favicon.ico">
+<link rel="shortcut icon" type="image/png" href="assets/favicon.ico">
     <meta name="author" content="Theme Starz, Fosterbin Technologies">
 
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
