added rohit jadhav

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -79,7 +79,7 @@
     <section id="footer-bottom">
         <div class="container">
             <div class="footer-inner">
-                <div class="copyright">© Deogiri Institute of Engineering and Management Studies. Designed and Developed <a href="http://www.fosterbin.com/">Fosterbin Technologies</a></div><!-- /.copyright -->
+                <div class="copyright">© Deogiri Institute of Engineering and Management Studies. Designed and Developed Rohit Jadhav</div><!-- /.copyright -->
             </div><!-- /.footer-inner -->
         </div><!-- /.container -->
     </section><!-- /#footer-bottom -->
